Fixed bug with relationship